--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,11 @@ build-job:
     - yarn
     - yarn build
 
+test-job:
+  stage: test
+  script: 
+    - echo "Testing..."
+
 deploy-job:
   stage: deploy
   script:
