Añadido logging hacia loki

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
       - "80:80"
     logging:
-      driver: syslog
+      driver: loki
       options:
-        syslog-address: "tcp://10.250.4.2:5000"
+        loki-url: "http://10.250.4.2:3100/loki/api/v1/push"
